flow changed for accept/deny